# GPU-interfere

./: CLAUDE.md  EXPERIMENTS_SUMMARY.md  README.md
background/: programming-vs-hardware.drawio  programming-vs-hardware.md  vecadd.cu
experiments_rtx5090/: README.md  common.sh  run_ipc.sh  run_l1.sh  run_l2.sh  run_membw.sh  run_pipelines.sh  run_pitfall_comp_mem.sh  run_pitfall_nvidia_smi.sh  run_pitfall_occupancy_mps.sh  run_pitfall_occupancy_stream.sh  run_tb_scheduler.sh
gpu-util-interference/: CMakeLists.txt
profiler/: README.md
profiler/code/: CMakeLists.txt  probe.cu
profiler/reports/: interference_report.md
profiler/scripts/: measure_interference.py  measure_kernels.py  profiler.py  report.py
section_4.1/: README.md  report.md
section_4.1/code/: CMakeLists.txt
section_4.1/results/: l2_cache.csv  mem_bw_mps.csv  mem_bw_saturation.csv  tb_scheduler.csv
section_4.1/scripts/: common.sh  parse_and_plot.py  run_411_tb.sh  run_412_l2.sh  run_413_membw.sh
section_4.2/: README.md  report.md
section_4.2/code/: CMakeLists.txt
section_4.2/results/: ipc.csv  l1_cache.csv  pipelines.csv
section_4.2/scripts/: common.sh  parse_and_plot.py  run_421_l1.sh  run_422_ipc.sh  run_423_pipelines.sh
section_4.3/: README.md  report.md
section_4.3/code/: CMakeLists.txt
section_4.3/results/: mm_pytorch.csv
section_4.3/scripts/: mm_one.py  parse_and_plot.py  run_43.py  run_431_mm.sh
visualizer/: PROPOSAL.md  README.md  dummy_run.py  extract.py  gb20x-l2.config  record.py  serve.sh  server.py
visualizer/gui/: replay.html
visualizer/mac/: gpu-replay.sh
visualizer/recordings/coloc_l1_fma/: meta.json  nvml.csv  report.nsys-rep
visualizer/recordings/llama3_prefill/: meta.json  nvml.csv  report.nsys-rep  stdout.txt
visualizer/recordings/llama3_sm50/: meta.json  nvml.csv  report.nsys-rep  stdout.txt
visualizer/recordings/probe_fma_sm50/: meta.json  nvml.csv  report.nsys-rep  stdout.txt
visualizer/recordings/trace_l1_fma/: meta.json  nvml.csv  report.nsys-rep  stdout.txt
visualizer/runs/: coloc_l1_fma.json  dram_check.json  llama3_prefill.json  llama3_sm50.json  probe_fma_sm50.json  trace_l1_fma.json
visualizer/web/: app.js  index.html  style.css
visualizer/workloads/: llama_prefill.py
